correção de erros

--- a/experiments/second-paper/prepare_data_lung_localization.ipynb
+++ b/experiments/second-paper/prepare_data_lung_localization.ipynb
@@ -1,33 +1,13 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "prepare-data-lung-localization.ipynb",
-      "provenance": [],
-      "machine_shape": "hm",
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMWlV7E9f5JE0RTqSje1Brd"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU",
-    "gpuClass": "standard"
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "### Instalação de Pacotes Auxiliares"
-      ],
       "metadata": {
         "id": "fn9qToVBXEgx"
-      }
+      },
+      "source": [
+        "### Instalação de Pacotes Auxiliares"
+      ]
     },
     {
       "cell_type": "code",
@@ -45,15 +25,20 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Importação de Pacotes Auxiliares"
-      ],
       "metadata": {
         "id": "g0NI5BD9XHFC"
-      }
+      },
+      "source": [
+        "### Importação de Pacotes Auxiliares"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "id": "8inaDzNKXLsq"
+      },
+      "outputs": [],
       "source": [
         "from distutils.dir_util import copy_tree\n",
         "from bbox_delimiters import bbox_utils\n",
@@ -63,36 +48,36 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "import cv2"
-      ],
-      "metadata": {
-        "id": "8inaDzNKXLsq"
-      },
-      "execution_count": 2,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "vo0NRhR-XiHq"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Baixando os Dados do Servidor"
-      ],
       "metadata": {
         "id": "6grUP8suWnTN"
-      }
+      },
+      "source": [
+        "### Baixando os Dados do Servidor"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "id": "A4rit9Z6WlLm"
+      },
+      "outputs": [],
       "source": [
         "shutil.copy(src = '/content/drive/MyDrive/datasets-projeto/chexpert-v10-small.zip', \n",
         "            dst = '/content/')\n",
@@ -101,15 +86,15 @@
         "                      extract_dir = '', format = 'zip')\n",
         "\n",
         "os.remove(path = '/content/chexpert-v10-small.zip')"
-      ],
-      "metadata": {
-        "id": "A4rit9Z6WlLm"
-      },
-      "execution_count": 6,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 47,
+      "metadata": {
+        "id": "kHcq7us6Wrsq"
+      },
+      "outputs": [],
       "source": [
         "shutil.copy(src = '/content/drive/MyDrive/datasets-projeto/vinbigdata-dataset.zip', \n",
         "            dst = '/content/')\n",
@@ -118,15 +103,15 @@
         "                      extract_dir = '', format = 'zip')\n",
         "\n",
         "os.remove(path = '/content/vinbigdata-dataset.zip')"
-      ],
-      "metadata": {
-        "id": "kHcq7us6Wrsq"
-      },
-      "execution_count": 47,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "sPRHpnFxWqFS"
+      },
+      "outputs": [],
       "source": [
         "copy_tree(src = '/content/drive/MyDrive/datasets-projeto/nih-files', \n",
         "          dst = '/content/nih-files/')\n",
@@ -141,35 +126,35 @@
         "  os.remove(f'/content/nih-files/{files}')\n",
         "\n",
         "shutil.rmtree(path = '/content/nih-files')"
-      ],
-      "metadata": {
-        "id": "sPRHpnFxWqFS"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "dataset = pd.read_csv('/content/all_datasets.csv', index_col = 0)"
-      ],
+      "execution_count": 3,
       "metadata": {
         "id": "sBFV8NGOWw-n"
       },
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "dataset = pd.read_csv('/content/all_datasets.csv', index_col = 0)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Aplicando o Algoritmo de Localização Pulmonar nas Imagens"
-      ],
       "metadata": {
         "id": "BV9Fvbe9ZuAq"
-      }
+      },
+      "source": [
+        "### Aplicando o Algoritmo de Localização Pulmonar nas Imagens"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "id": "TeKgt1PLZ0D9"
+      },
+      "outputs": [],
       "source": [
         "shutil.copy(src = '/content/drive/MyDrive/lung-localization/vgg/model_vgg5.zip', \n",
         "            dst = '/content/')\n",
@@ -182,15 +167,15 @@
         "model_loc = tf.keras.models.load_model('/content/content/model_vgg5')\n",
         "\n",
         "lung_localization = bbox_utils()"
-      ],
-      "metadata": {
-        "id": "TeKgt1PLZ0D9"
-      },
-      "execution_count": 4,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "id": "X3HAAkLdZ0tz"
+      },
+      "outputs": [],
       "source": [
         "def make_localization(filename):\n",
         "  '''\n",
@@ -209,15 +194,15 @@
         "    pass\n",
         "\n",
         "  return"
-      ],
-      "metadata": {
-        "id": "X3HAAkLdZ0tz"
-      },
-      "execution_count": 5,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "id": "XdbNymWBmuTI"
+      },
+      "outputs": [],
       "source": [
         "def test_image_files(image_files, arr_ref = 'Array 1'):\n",
         "  '''\n",
@@ -234,15 +219,15 @@
         "      test = plt.imread(image_file)\n",
         "    except:\n",
         "      print(f'Erro ao ler {image_file} | Array de Referência: {arr_ref}')"
-      ],
-      "metadata": {
-        "id": "XdbNymWBmuTI"
-      },
-      "execution_count": 6,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {
+        "id": "g5IHQ4UsjfBs"
+      },
+      "outputs": [],
       "source": [
         "dataset_chexpert = dataset[dataset['Dataset'] == 'CheXpert']\n",
         "image_files = list(dataset_chexpert['Path'])\n",
@@ -253,15 +238,15 @@
         "img_files5 = image_files[int(4*len(image_files)/7) : int(5*len(image_files)/7)]\n",
         "img_files6 = image_files[int(5*len(image_files)/7) : int(6*len(image_files)/7)]\n",
         "img_files7 = image_files[int(6*len(image_files)/7) : int(7*len(image_files)/7)]"
-      ],
-      "metadata": {
-        "id": "g5IHQ4UsjfBs"
-      },
-      "execution_count": 19,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "vMcaEyy2nXaj"
+      },
+      "outputs": [],
       "source": [
         "test_image_files(image_files = img_files1, arr_ref = 'Array 1')\n",
         "test_image_files(image_files = img_files2, arr_ref = 'Array 2')\n",
@@ -270,15 +255,15 @@
         "test_image_files(image_files = img_files5, arr_ref = 'Array 5')\n",
         "test_image_files(image_files = img_files6, arr_ref = 'Array 6')\n",
         "test_image_files(image_files = img_files7, arr_ref = 'Array 7')"
-      ],
-      "metadata": {
-        "id": "vMcaEyy2nXaj"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "HslxgCAiZ3QJ"
+      },
+      "outputs": [],
       "source": [
         "_ = list(map(make_localization, img_files1))\n",
         "print('Recorte pulmonar nas imagens \"img_files1\" feito com sucesso!')\n",
@@ -294,83 +279,83 @@
         "print('Recorte pulmonar nas imagens \"img_files6\" feito com sucesso!')\n",
         "_ = list(map(make_localization, img_files7))\n",
         "print('Recorte pulmonar nas imagens \"img_files7\" feito com sucesso!')"
-      ],
-      "metadata": {
-        "id": "HslxgCAiZ3QJ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "VQTASSrejv2X"
+      },
+      "outputs": [],
       "source": [
         "shutil.make_archive(base_name = 'CheXpert-v1.0-small', format = 'zip', \n",
         "                    root_dir = '/content/CheXpert-v1.0-small')\n",
         "shutil.move('/content/CheXpert-v1.0-small.zip', \n",
         "            '/content/drive/MyDrive/datasets-lung-loc')"
-      ],
-      "metadata": {
-        "id": "VQTASSrejv2X"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 71,
+      "metadata": {
+        "id": "nFgVdRIF7YVl"
+      },
+      "outputs": [],
       "source": [
         "dataset_vinbigdata = dataset[dataset['Dataset'] == 'VinBigData']\n",
         "image_files = list(dataset_vinbigdata['Path'])\n",
         "img_files1 = image_files[int(0*len(image_files)/2) : int(1*len(image_files)/2)]\n",
         "img_files2 = image_files[int(1*len(image_files)/2) : int(2*len(image_files)/2)]"
-      ],
-      "metadata": {
-        "id": "nFgVdRIF7YVl"
-      },
-      "execution_count": 71,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "test_image_files(image_files = img_files1, arr_ref = 'Array 1')\n",
-        "test_image_files(image_files = img_files2, arr_ref = 'Array 2')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "DwH5k5Xe8bN-"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "test_image_files(image_files = img_files1, arr_ref = 'Array 1')\n",
+        "test_image_files(image_files = img_files2, arr_ref = 'Array 2')"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "o5yUYyga8gIl"
+      },
+      "outputs": [],
       "source": [
         "_ = list(map(make_localization, img_files1))\n",
         "print('Recorte pulmonar nas imagens \"img_files1\" feito com sucesso!')\n",
         "_ = list(map(make_localization, img_files2))\n",
         "print('Recorte pulmonar nas imagens \"img_files2\" feito com sucesso!')"
-      ],
-      "metadata": {
-        "id": "o5yUYyga8gIl"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "jWuFuTgE8qaY"
+      },
+      "outputs": [],
       "source": [
         "shutil.make_archive(base_name = 'vinbigdata', format = 'zip', \n",
         "                    root_dir = '/content/vinbigdata')\n",
         "shutil.move('/content/vinbigdata.zip', \n",
         "            '/content/drive/MyDrive/datasets-lung-loc')"
-      ],
-      "metadata": {
-        "id": "jWuFuTgE8qaY"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "id": "y_K5Ryx8L65p"
+      },
+      "outputs": [],
       "source": [
         "dataset_nih = dataset[dataset['Dataset'] == 'NIH']\n",
         "image_files = list(dataset_nih['Path'])\n",
@@ -378,29 +363,29 @@
         "img_files2 = image_files[int(1*len(image_files)/4) : int(2*len(image_files)/4)]\n",
         "img_files3 = image_files[int(2*len(image_files)/4) : int(3*len(image_files)/4)]\n",
         "img_files4 = image_files[int(3*len(image_files)/4) : int(4*len(image_files)/4)]"
-      ],
-      "metadata": {
-        "id": "y_K5Ryx8L65p"
-      },
-      "execution_count": 7,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Tv2m-Wn-L8ZZ"
+      },
+      "outputs": [],
       "source": [
         "test_image_files(image_files = img_files1, arr_ref = 'Array 1')\n",
         "test_image_files(image_files = img_files2, arr_ref = 'Array 2')\n",
         "test_image_files(image_files = img_files3, arr_ref = 'Array 3')\n",
         "test_image_files(image_files = img_files4, arr_ref = 'Array 4')"
-      ],
-      "metadata": {
-        "id": "Tv2m-Wn-L8ZZ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "lYwD7guNMBhx"
+      },
+      "outputs": [],
       "source": [
         "_ = list(map(make_localization, img_files1[1:]))\n",
         "print('Recorte pulmonar nas imagens \"img_files1\" feito com sucesso!')\n",
@@ -410,26 +395,48 @@
         "print('Recorte pulmonar nas imagens \"img_files3\" feito com sucesso!')\n",
         "_ = list(map(make_localization, img_files4))\n",
         "print('Recorte pulmonar nas imagens \"img_files4\" feito com sucesso!')"
-      ],
-      "metadata": {
-        "id": "lYwD7guNMBhx"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "n2cLkz3eMVGL"
+      },
+      "outputs": [],
       "source": [
         "shutil.make_archive(base_name = 'images', format = 'zip', \n",
         "                    root_dir = '/content/images')\n",
         "shutil.move('/content/images.zip', \n",
         "            '/content/drive/MyDrive/datasets-lung-loc')"
-      ],
-      "metadata": {
-        "id": "n2cLkz3eMVGL"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "authorship_tag": "ABX9TyMWlV7E9f5JE0RTqSje1Brd",
+      "collapsed_sections": [],
+      "machine_shape": "hm",
+      "name": "prepare-data-lung-localization.ipynb",
+      "provenance": []
+    },
+    "gpuClass": "standard",
+    "kernelspec": {
+      "display_name": "Python 3.8.10 ('base')",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.8.10"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "efc8d9695810fe3585b36c89909e770e9664819a06c5f0b2cd87a4a705242f97"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
