--- a/experiments/second-paper/abnormality_detection_efficientnet.ipynb
+++ b/experiments/second-paper/abnormality_detection_efficientnet.ipynb
@@ -1014,11 +1014,18 @@
     },
     "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.8.10 ('base')",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.8.10"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "efc8d9695810fe3585b36c89909e770e9664819a06c5f0b2cd87a4a705242f97"
+      }
     }
   },
   "nbformat": 4,
